--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile files('libs/ksoap2-android-assembly-3.6.0-jar-with-dependencies.jar')
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
 }
-
