--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <activity android:name=".TablesActivity"></activity>
         <activity
-            android:name="com.sge.mobile.presentation.ProductsActivity"
+            android:name=".ProductsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_products" />
         <activity
-            android:name="com.sge.mobile.presentation.LoginActivity"
+            android:name=".LoginActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_login">
             <intent-filter>
@@ -25,17 +26,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.sge.mobile.presentation.OrderActivity"
+            android:name=".OrderActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_order"></activity>
+            android:label="@string/title_activity_order" />
         <activity
-            android:name="com.sge.mobile.presentation.ChangePasswordActivity"
+            android:name=".ChangePasswordActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_change_password"></activity>
+            android:label="@string/title_activity_change_password" />
         <activity
-            android:name="com.sge.mobile.presentation.TableOrdersActivity"
+            android:name=".TableOrdersActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/title_activity_table_orders"></activity>
+            android:label="@string/title_activity_table_orders" />
     </application>
 
 </manifest>
